attempting to fix the overflow of the campaign CTA (WIP)

--- a/components/campaign-cta/main.css
+++ b/components/campaign-cta/main.css
@@ -1,2 +1,6 @@
 @tailwind components;
 @tailwind utilities;
+
+.su-page-has-sidebar [data-component="campaign-cta"] {
+  @apply su-px-[20px] md:su-px-[50px];
+}
